fix details feeds profile page dark mode

--- a/src/app/pages/feeds/profile/profile.page.scss
+++ b/src/app/pages/feeds/profile/profile.page.scss
@@ -17,3 +17,16 @@ ion-slides {
         }
     }
 }
+
+
+.darkContainer{
+    .channel-title-div .channel-title{
+        font-size: 26px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: #ffffff;
+    }
+}
